# sdr

./: Cargo.toml  bands.json
src/: analysis.rs  asr_provider.rs  audio.rs  band_info.rs  by_ptr.rs  channels_gpu.rs  chunked_deque.rs  document.rs  document_graphics.rs  dsp.rs  duration_ext.rs  format.rs  hardware.rs  history.rs  id_factory.rs  lib.rs  preprocessor.rs  processor.rs  processor_graphics.rs  raw_history.rs  seqdeque.rs  stream_history.rs  ui.rs  waterfall.rs  waterfall_gpu.rs
src/modulation/: fm.rs  mod.rs
src/processor/: fm.rs  mod.rs  waterfall.rs
src/waterfall_renderer/: mod.rs  waterfall_shader.wgsl
testing/: fm_demod.py  plot_fft.py
