[package]
name = "sdr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sdr-gui"
path = "src/bin/main.rs"

[dependencies]
soapysdr = "0.4.5"
num-complex = "0.4"
rustfft = "6.2"
eframe = { version = "0.33.3", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.33.3"
egui-wgpu = { version = "0.33.3", features = ["winit"] }
wgpu = { version = "27.0", features = ["vulkan", "dx12", "metal"] }
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
rayon = "1.11.0"
rfd = "0.17.2"
slotmap = "1.1.1"
dyn-clone = "1.0.20"
chrono = "0.4"
egui_plot = "0.34.1"

[profile.dev]
opt-level = 3
